kustomize/overlays/production/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wostal-eu
  labels:
    app: wostal-eu
spec:
  gateways:
  - wostal-eu
  hosts:
  - wostal-eu.local
  - acme.com
  http:
  - name: primary
    route:
    - destination:
        host: wostal-eu
        port:
          number: 80
      weight: 100
    - destination:
        host: wostal-eu-canary
        port:
          number: 80
      weight: 0

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wostal-eu
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
     - "*"
